fix: unset the z-index for icon buttons in a text field

--- a/packages/mdc-textfield/addon/styles/addon.scss
+++ b/packages/mdc-textfield/addon/styles/addon.scss
@@ -7,3 +7,8 @@
 
 @include textfield.core-styles;
 
+.mdc-text-field {
+  .mdc-icon-button {
+    z-index: unset;
+  }
+}
